--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Digital Suppliers\AppData\Local\Temp\testng-eclipse-470663310\testng-customsuite.xml</span>
+                    <span>C:\Users\Digital Suppliers\AppData\Local\Temp\testng-eclipse-1817416405\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day1.HttpRequest" class="method navigator-link" hash-for-method="deleteUser">deleteUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day1.HttpRequest" class="method navigator-link" hash-for-method="postUser">postUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day1.HttpRequest" class="method navigator-link" hash-for-method="putUser">putUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day2.JsonPathResponse" class="method navigator-link" hash-for-method="jsonPath">jsonPath</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,28 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">day1.HttpRequest</span>
+              <span class="class-name">day2.JsonPathResponse</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="deleteUser">
-                  </a> <!-- deleteUser -->
-                  <span class="method-name">deleteUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="postUser">
-                  </a> <!-- postUser -->
-                  <span class="method-name">postUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="putUser">
-                  </a> <!-- putUser -->
-                  <span class="method-name">putUser</span>
+                  <a name="jsonPath">
+                  </a> <!-- jsonPath -->
+                  <span class="method-name">jsonPath</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -160,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Digital Suppliers\AppData\Local\Temp\testng-eclipse-470663310\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Digital Suppliers\AppData\Local\Temp\testng-eclipse-1817416405\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -169,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;day1.HttpRequest&quot;/&gt;
+      &lt;class name=&quot;day2.JsonPathResponse&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;jsonPath&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- day2.JsonPathResponse --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -209,24 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'postUser')
-data.setCell(0, 2, 'day1.HttpRequest')
-data.setCell(0, 3, 6843);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'putUser')
-data.setCell(1, 2, 'day1.HttpRequest')
-data.setCell(1, 3, 728);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'deleteUser')
-data.setCell(2, 2, 'day1.HttpRequest')
-data.setCell(2, 3, 445);
+data.setCell(0, 1, 'jsonPath')
+data.setCell(0, 2, 'day2.JsonPathResponse')
+data.setCell(0, 3, 5992);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -245,9 +217,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">day1.HttpRequest</span>
+              <span class="ignored-class-name">day2.JsonPathResponse</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">getUser</span>
+                <span class="ignored-method-name">jsonPathReponse</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -259,18 +231,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">day1.HttpRequest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">day2.JsonPathResponse</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">postUser</span>
+                <span class="method-name">jsonPath</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">putUser</span>
-                <span class="method-start">6890 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">deleteUser</span>
-                <span class="method-start">7626 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
