--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>day1.HttpRequest.getUser</td></tr>
+<tr><td>day2.JsonPathResponse.jsonPathReponse</td></tr>
 </table>
